--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="box" style="text-align: justify ">
                     <i class="fab fa-html5"></i>
                     <div class="text">Future Wing</div>
-                    <h3>Skill Used: HTML, CSS, MySQL</h3>
+                    <h3>Skill Used:HTML,CSS,MySQL</h3>
                     <p>We comprehend the diverse requirements of our clients and are wholeheartedly dedicated to
                         delivering expert solutions through our comprehensive range of service. We build trust with our
                         clients by creating solutions that not only aid in wealth accumulation but also ensure asset
@@ -276,6 +276,9 @@
             <div class="column right">
                 <form action="https://formspree.io/f/maygadzl" method="post">
                     <fieldset class="uk-fieldset">
+                        <div class="text">
+                            LEAVE A MESSAGE
+                        </div>
                         <div class="uk-margin">
                             <input class="uk-input" name="Name" type="text" placeholder="Name" aria-label="Input" required>
                         </div>
@@ -289,7 +292,7 @@
                             <textarea class="uk-textarea" name="Message" rows="5" placeholder="Message..." aria-label="Textarea" required></textarea>
                         </div>
                         <div class="uk-margin">
-                            <button class="uk-button uk-button-primary uk-button-large" type="submit">Submit</button>
+                            <button class="uk-button uk-button-danger uk-button-large" type="submit">Submit</button>
                         </div>
                     </fieldset>
                 </form>
@@ -304,7 +307,7 @@
 
 <footer>
     <div>
-        <span>Created By <a href="#">Api Adhikary</a> | <span class="far fa-copyright"></span> 2023 All rights reserved. </span>
+        <span>Created By <a href="index.html">Api Adhikary</a> | <span class="far fa-copyright"></span> 2023 All rights reserved. </span>
     </div>
 
 </footer>
