--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="js/uikit.min.js"></script>
-
+    <link rel="icon" type="image/png" href="images/fav.png">
 
 </head>
 <body>
