--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="js/uikit.min.js"></script>
     <link rel="icon" type="image/png" href="images/fav.png">
+
 
 </head>
 <body>
@@ -274,7 +278,7 @@
                 </div>
             </div>
             <div class="column right">
-                <form action="https://formspree.io/f/maygadzl" method="post">
+                <form id="contact-form" method="post" action="https://formspree.io/f/maygadzl">
                     <fieldset class="uk-fieldset">
                         <div class="text">
                             LEAVE A MESSAGE
@@ -312,5 +316,35 @@
 
 </footer>
 
+<!-- Messenger Chat Plugin Code -->
+<div id="fb-root"></div>
+
+<!-- Your Chat Plugin code -->
+<div id="fb-customer-chat" class="fb-customerchat">
+</div>
+
+<script>
+    var chatbox = document.getElementById('fb-customer-chat');
+    chatbox.setAttribute("page_id", "151801151346527");
+    chatbox.setAttribute("attribution", "biz_inbox");
+</script>
+
+<!-- Your SDK code -->
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            xfbml            : true,
+            version          : 'v18.0'
+        });
+    };
+
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
