--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     experience in this field, and love to contribute as much as I can. With my skills and ability,
                     I am seeking to pursue a successful career and grow. Hi Five to Life :) </p>
 
-                <a href="cv/CV.pdf" target="_blank">Download
+                <a href="cv/Api_Adhikary.pdf" target="_blank">Download
                     CV</a>
             </div>
 
